--- a/environments/prod/values.yaml
+++ b/environments/prod/values.yaml
@@ -2,14 +2,14 @@ deployment:
   blue:
     containerPort: 8333
     repository: alt-btc-node
-    tag: 1.0
+    tag: "1.0"
     nodePort: 30001
     hostPath: /datadir/node-data-prod/blue
     capacity: 1Ti
   green:
     containerPort: 8333
     repository: alt-btc-node
-    tag: 1.0
+    tag: "1.0"
     nodePort: 30001
     hostPath: /datadir/node-data-prod/green
     capacity: 1Ti
