--- a/environments/test/values.yaml
+++ b/environments/test/values.yaml
@@ -2,14 +2,14 @@ deployment:
   blue:
     containerPort: 18333
     repository: alt-btc-node
-    tag: 1.0
+    tag: "1.0"
     nodePort: 30002
     hostPath: /datadir/node-data-test/blue
     capacity: 1Ti
   green:
     containerPort: 18333
     repository: alt-btc-node
-    tag: 1.0
+    tag: "1.0"
     nodePort: 30002
     hostPath: /datadir/node-data-test/green
     capacity: 1Ti
