--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,7 +1,6 @@
 helmDefaults:
   wait: false
   timeout: 600
-  recreatePods: true
   force: true
   createNamespace: true
 
@@ -24,6 +23,7 @@ releases:
     atomic: true
     cleanupOnFail: true
     missingFileHandler: Error
+    wait: false
     values:
     - values/values.yaml.gotmpl
 
